<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_proyectos">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.getstarted.heygoals.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_proyectos"
        android:name="com.getstarted.heygoals.ui.proyectos.ProyectosFragment"
        android:label="@string/proyectos"
        tools:layout="@layout/fragment_proyectos" />
    <fragment
        android:id="@+id/navigation_habitos"
        android:name="com.getstarted.heygoals.ui.habitos.HabitosFragment"
        android:label="@string/habitos"
        tools:layout="@layout/fragment_habitos" />
</navigation>
